--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,9 +2,9 @@ name: Security checks
 
 on:
   push:
-    branches: [ main, dev, staging, prod ]
+    branches: [ staging ]
   pull_request:
-    branches: [ main, dev, staging, prod ]
+    branches: [ prod ]
 
 jobs:
   tfsec:
